# cabel_torg

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  test_access
admin/: .env.sample  (+6 more)
backend/: .env.sample  Pipfile  alembic.ini  log_config.ini  pyproject.toml  requirements.txt  setup.cfg  test_1.xml
backend/create_invoice_pdf/: app.py  invoice.html
backend/migrations/versions/: 00462ed12454_add_new_model_parser_info.py  0172a3e2f2a0_add_cascade_deleting_for_product_id_in_.py  0f92971a1c3f_add_price_document_field.py  14a01b61f693_add_new_field_for_category.py  1e2c82f66fbe_addfeedback_and_request_call_routers.py  24c9612c2434_add_logo_for_venodrs.py  52cc778b746d_make_vendor_code_unique.py  531997d75f68_create_a_new_field_for_documents_in_.py  5b768a87846f_add_deleting_of_products_and_.py  6bc08dd9566b_add_is_pickup_for_delivery_type_model.py  78927e043df4_initiazlize_models.py  8a827774614e_add_weight_for_products.py  8d74b94e8fdd_add_is_new_field_for_products.py  943806c24a1c_add_new_field_price_on_request.py  944ce382a1b7_add_slug_field_for_product.py  9470a62da656_add_preview_text_field.py  96a59105e6ec_add_service_field_for_seo_optimisation.py  aaf9a39a0654_add_banners.py  bc8623dfdb6d_init_models.py  c335a69dcd44_add_product_id_in_rquest_call_model.py  c6557f83a714_add_quck_order_attribute.py  c83fc3649876_add_set_null_for_product_id_in_request_.py  e1d6c81820ca_add_indexes.py  (+1 more)
backend/mixins/: base_mixin.py  category_mixin.py  goods_mixin.py
backend/scripts/: backup.sh
backend/src/: app.py  log.py
(+462 files in other folders)
