[tool.poetry]
name = "cabel_torg"
version = "0.1.0"
description = ""
authors = ["dmitryzhurkovsky <dmitryzhurkovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.32"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
mypy = "^0.942"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
